cmake_minimum_required(VERSION 3.25)
project(lab3 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -fconcepts-diagnostics-depth=2")

include_directories(src/orderedTable/include)
include_directories(src/map/include)
include_directories(src/team/include)
include_directories(src/instructions/include)
include_directories(src/orders/include)
include_directories(src/soldiers/include)
include_directories(src/training/include)
include_directories(src/simulation/include)
include_directories(lib/include)

add_subdirectory(src/orderedTable)
add_subdirectory(src/instructions)
add_subdirectory(src/orders)
add_subdirectory(src/team)
add_subdirectory(src/soldiers)
add_subdirectory(src/map)
add_subdirectory(src/training)
add_subdirectory(src/simulation)

add_subdirectory(tests)
